you can now only send one request per game, and I fixed the ui on mobile devices. Also added profanity filter

--- a/frontend/src/scss/_title.scss
+++ b/frontend/src/scss/_title.scss
@@ -53,6 +53,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow: scroll;
 
     table {
       width: 25vw;
